# LabsCpp4dsem

./: CMakeLists.txt  README.md
source/lab1/: MyQueue.cpp  MyQueue.h  MyQueuePriv.cpp  MyQueuePriv.h  MyQueueProt.cpp  MyQueueProt.h  MyQueuePubl.cpp  MyQueuePubl.h  lab1.cpp  lab1.h
source/lab1/docs/: prog1.docx
source/lab2/: MyStack.cpp  MyStack.h  Point.cpp  Point.h  lab2.cpp  lab2.h
source/lab3/: Circle.cpp  Circle.h  Figure.h  Input.txt  Output.txt  RectTriangle.cpp  RectTriangle.h  Rectangle.cpp  Rectangle.h  Trapezoid.cpp  Trapezoid.h  lab3.cpp  lab3.h
source/lab4/: TempArray.h  lab4.cpp  lab4.h
source/libs/: libs.h
source/main/: main.cpp
